# drift-aware-deep-learning

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: base.yaml
experiments/: run_experiment.py
notebooks/: 01_eda.ipynb  02_drift_analysis.ipynb
src/data/: loader.py  preprocessing.py  splits.py
src/models/: cnn.py  factory.py
src/training/: callbacks.py
src/utils/: config.py
